# adyaMcp

mcp_servers/python/clients/: .env  requirements.txt  run.py
mcp_servers/python/clients/src/: client_and_server_config.py  client_and_server_execution.py
mcp_servers/python/servers/MCP-APPSIGNAL/mcp-appsignal/: README.md  pyproject.toml  test_dynamic_credentials.py
mcp_servers/python/servers/MCP-APPSIGNAL/mcp-appsignal/src/mcp_appsignal/: __init__.py  appsignal.py  server.py  toolhandler.py  tools_errors.py
mcp_servers/python/servers/MCP-STOCKANALYZER/mcp-stockanalyzer/: README.md  __init__.py  functions.py  pyproject.toml
mcp_servers/python/servers/MCP-STOCKANALYZER/mcp-stockanalyzer/src/mcp_stockanalyzer/: server.py  stock.py  toolhandler.py  tools_stock.py
mcp_servers_documentation/MCP-APPSIGNAL/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/MCP-STOCKANALYZER/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/OTHER_MCP_SERVERS/: credentials.md  server_features.md
